--- a/src-ex2/README.org
+++ b/src-ex2/README.org
@@ -1,7 +1,7 @@
 ** Description
-Assemble the genesis block header and calculate the double sha256 hash. Check that it matches the expected hash.
+Assemble the genesis block header and calculate the double sha256 hash using and adaptation of [[https://www.nayuki.io/page/fast-sha2-hashes-in-x86-assembly][Nayuki's x86 assembly implementation]].
 ** Compilation
-Compile with 
+Compile with: 
 #+BEGIN_SRC 
-g++ -Wall ex1.cpp -I../include/ -o ex1 -lbitcoin_util -lbitcoin_crypto_base -lbitcoin_crypto_shani -lbitcoin_crypto_avx2 -lbitcoin_crypto_sse41 -L../lib/
+g++ -Wall ex2.cpp Sha256.cpp -I../include -o ex2 -lbitcoin_util -L../lib 
 #+END_SRC
